# thonny-py5mode

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
thonnycontrib/backend/: py5_imported_mode_backend.py
thonnycontrib/kyanite_theme_syntax/: __init__.py
thonnycontrib/kyanite_theme_ui/: __init__.py
thonnycontrib/thonny-py5mode/: __init__.py  about_plugin.py  install_jdk.py
