[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thonny-py5mode"
dynamic = ["version"]
description = "py5 mode plugin for Thonny"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tabreturn", email = "thonny-py5mode@tabreturn.com" },
    { name = "Jim Schmitz", email = "jim@ixora.io" },
    { name = "Alexandre Villares", email = "abav@lugaralgum.com" },
]
classifiers = [
    "Environment :: Plugins",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "install-jdk==1.1.0",
    "py5",
    "pyperclip==1.9.0",
]

[project.urls]
Homepage = "https://github.com/py5coding/thonny-py5mode"

[tool.hatch.version]
path = "thonnycontrib/thonny-py5mode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["/thonnycontrib"]

[tool.hatch.build.targets.sdist]
include = [
    "/thonnycontrib",
]
